[package]
name = "ori-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
console_error_panic_hook = "0.1"
url = "2.5"
winit = "0.29"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Location"]

[dependencies.ori]
git = "https://github.com/ChangeCaps/ori.git"
features = ["full"]
